# cocks-conquest

./: Cargo.toml  Needed Changes.odt  Pluginification.odt  README.md  feedback.md  system order junk.txt
.cargo/: config.toml
.github/workflows/: release.yaml
assets/: Sprite-0001.aseprite
assets/help/: combat.txt  controls.txt  intro.txt  stealth.txt  tips.txt
src/: components.rs  data.rs  events.rs  helpers.rs  main.rs  resources.rs  systems.rs
src/actions/: actions.rs  attack.rs  healing.rs  interactions.rs  melee.rs  mod.rs  movement.rs  ranged.rs  vore.rs
src/actors/: actors.rs  ai.rs  alignments.rs  player.rs  progressive_stats.rs  stats.rs  status_effects.rs  temp_stats.rs  vision.rs
src/ai/: ai.rs  engage_behavior.rs  melee_behavior.rs  mod.rs  ranged_behavior.rs  targetting_behavior.rs  wander_behavior.rs  wander_behaviour.rs
src/bundles/: actors.rs  map_objects.rs  mod.rs
src/help/: help.rs
src/log/: log.rs
src/map/: map.rs  mod.rs
src/player/: ending.rs  mod.rs  player.rs  player_input.rs  targetting.rs
src/rendering/: effects.rs  mod.rs  rendering.rs  window.rs
src/saveload/: saveload.rs
src/setup/: mod.rs  setup.rs
src/systems/: ai.rs  map.rs  mod.rs  movement.rs  player_input.rs  setup.rs  turns.rs
src/turn/: mod.rs  turn.rs
src/ui/: ui.rs
