[package]
name = "cocks-conquest"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Remove "dynamic" after any releases or include libbevy_dylib
#bevy = { version = "0.7.0", features = ["dynamic"] }
bevy = { version = "0.7.0" }
iyes_loopless = "0.5.1"
bevy_ascii_terminal = { version = "0.9.1" }
bevy_tiled_camera = { version = "0.3.1" }
sark_grids = "0.1.5"
rand = { version = "0.8.5" }
adam_fov_rs = "0.1.3"
strfmt = "0.1.6"
Inflector = "0.11.4"
caith = "4.2.2"

#bevy-inspector-egui = "0.8.2"
#bevy_ecs_tilemap = { version = "0.5.0"}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3