[package]
name = "cocks-conquest"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Remove "dynamic" after any releases or include libbevy_dylib
#bevy = { version = "0.7.0", features = ["dynamic"] }
bevy = { version = "0.8.1" }
iyes_loopless = "0.7.1"
bevy_ascii_terminal = { version = "0.11.0" }
bevy_tiled_camera = { version = "0.4.1" }
glam = "0.21.3"
multimap = "0.8.3"
thunderdome = "0.5.1"
sark_grids = "0.5.0"
adam_fov_rs = {path= "../!_Local-Plugins/adam_fov_rs"}
rand = { version = "0.8.5" }
strfmt = "0.1.6"
Inflector = "0.11.4"
unicode-segmentation = "1.9.0"
caith = "4.2.2"
dyn-clonable = "0.9.0"
serde = "1.0.147"

#bevy-inspector-egui = "0.8.2"
#bevy_ecs_tilemap = { version = "0.5.0"}

[features]
console = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3